# noc-netbox-local

./: README.md  setup.cfg
netbox_local/: pipeline.py
