[metadata]
name = netbox_local
version = 1.0.0
description = Site-specific NetBox config
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bowdoincollege/noc-netbox-local
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = netbox_local
python_requires = >=3.6.1
include_package_data = True
